--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
-Welcome to my IST 226 Homepage!
+<html>
+
+<head>
+<title>My Home Page</title>
+</head>
+
+<body>
+<Center>
+<ul>
+    <a href="Index.html">Home</a>
+    <a href="Heading.html">Heading Demo</a>
+    <a href="Textdemo.html">Text Demo</a>
+    <a href="OrderedList.html">Ordered List Demo</a>
+    <a href="Unorderedlist.html">Unordered List Demo</a>
+    <a href="Tabledemo.html">Table Demo</a>
+</ul>
+</Center>
+
+<P>Welcome to my IST 226 Homepage!</P>
+
+    <footer>
+<center>
+    <hr>
+    <p>&copy; IST 226 2022 </p>
+</center>
+
+    </footer>
+
+</body>
+
+</html>
