--- a/CssDemo.html
+++ b/CssDemo.html
@@ -36,7 +36,7 @@
 <h1 class="alignLeft">Left</h1>
 <h1 class="alignCenter">Center</h1>
 <h1 class="alignRight">Right</h1>
-<h1>White Texxt Black Backround</h1>
+<h1 class="alignCenter white blackBackground">White Text Black Backround</h1>
     <footer>
 <center>
     <hr>
