--- a/Mediaquerydemo.html
+++ b/Mediaquerydemo.html
@@ -1,7 +1,8 @@
 <html>
 
 <head>
-<title>My Home Page</title>
+<title>Media Query</title>
+<link rel="stylesheet" href="boxstyle.css">
 </head>
 
 <body>
@@ -14,11 +15,19 @@
     <a href="Unorderedlist.html">Unordered List Demo</a>
     <a href="Tabledemo.html">Table Demo</a>
     <a href="CssDemo.html">CSS Demo</a>
-    <a href="Mediaquerydemo.html">Media Query Demo</a>
 </ul>
 </Center>
 
-<P>Welcome to my IST 226 Homepage!</P>
+<center>
+    <h2>Media Query</h2>
+<h3>Change the width of the page to see changes in the page content</h3>    
+</center>
+
+<div class="box greenbox"></div>
+<div class="box redbox"></div>
+<div class="box bluebox"></div>
+<div class="box violetbox"></div>
+<div class="box yellowbox"></div>
 
     <footer>
 <center>
