--- a/Tabledemo.html
+++ b/Tabledemo.html
@@ -14,6 +14,7 @@
             <a href="Unorderedlist.html">Unordered List Demo</a>
             <a href="Tabledemo.html">Table Demo</a>
             <a href="CssDemo.html">CSS Demo</a>
+            <a href="Mediaquerydemo.html">Media Query Demo</a>
         </ul>
         </Center>
 
