--- a/Website/Unorderedlist.html
+++ b/Website/Unorderedlist.html
@@ -14,6 +14,8 @@
             <a href="Unorderedlist.html">Unordered List Demo</a>
             <a href="Tabledemo.html">Table Demo</a>
             <a href="CssDemo.html">CSS Demo</a>
+            <a href="Mediaquerydemo.html">Media Query Demo</a>
+            <a href="Travel.html">Travel Page</a>
         </ul>
         </Center>
 <h1>This is a demo of Bulleted Lists in HTML</h1>
