--- a/Textdemo.html
+++ b/Textdemo.html
@@ -15,6 +15,7 @@
             <a href="Tabledemo.html">Table Demo</a>
             <a href="CssDemo.html">CSS Demo</a>
             <a href="Mediaquerydemo.html">Media Query Demo</a>
+            <a href="Travel.html">Travel Page</a>
         </ul>
         </Center>
     <Center>
