--- a/JSDemo.html
+++ b/JSDemo.html
@@ -1,20 +1,7 @@
 <html>
 
 <head>
-<title>My Home Page</title>
-
-<!--
-    Comments in HTML
--->
-
-<style>
-    /* Comments in CSS*/
-    body {
-        background-color: bisque;
-    }
-</style>
-
-<link rel="stylesheet" href="CssDemo.css"
+<title>JS Demo</title>
 </head>
 
 <body>
@@ -34,13 +21,18 @@
 </ul>
 </Center>
 
-<h1 class="blue">Make me blue</h1>
-<h1 class="purple">Make me purple</h1>
-<h1 id="red">Make me red</h1>
-<h1 class="alignLeft">Left</h1>
-<h1 class="alignCenter">Center</h1>
-<h1 class="alignRight">Right</h1>
-<h1 class="alignCenter white blackBackground">White Text Black Backround</h1>
+<P>Open the console!</P>
+<script>
+    // this is an international javascript section 
+    console.log("This script was loaded within HTML")
+</script>
+
+
+<center>
+
+    <div id="name">Hello!</div>
+</center>
+
     <footer>
 <center>
     <hr>
@@ -50,5 +42,6 @@
     </footer>
 
 </body>
+<script type="text/javascript" src="app.js"></script>
 
 </html>
