--- a/OrderedList.html
+++ b/OrderedList.html
@@ -16,6 +16,8 @@
             <a href="CssDemo.html">CSS Demo</a>
             <a href="Mediaquerydemo.html">Media Query Demo</a>
             <a href="Travel.html">Travel Page</a>
+            <a href="JSDemo.html">javascript Demo</a>
+
         </ul>
         </Center>
 <h1>This is a demo of Numbered Lists in HTML</h1>
