--- a/Travel.html
+++ b/Travel.html
@@ -17,6 +17,7 @@
     <a href="Mediaquerydemo.html">Media Query Demo</a>
     <a href="Travel.html">Travel Page</a>
     <a href="JSDemo.html">javascript Demo</a>
+    <a href="plotlydemo.html">javascript Demo</a>
 
 </ul>
 </Center>
